[package]
name = "problems"
version = "0.1.0"
authors = ["risboo6909 <ttyv00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8"
failure = "0.1.6"
itertools = "0.8.2"
utils = { path = "../utils" }
